- add log templates
- add option to set the logcount for GPX export
- add tooltip for counters in main screen

todo GAPP SF:
- Open Areas map

todo GAPP/GAPP SF

V1.9.21.0

- gapp: add: delete images from image folder for active or selected geocaches
- gappsf: add: delete images from image folder for active or selected geocaches

V1.9.20.0

- gapp: fix: added missing selected geocache marker to setup.
- gapp: change: moved extra geocache information to the absolute beginning of the description with GPX export
- gapp: add: Live API authorization with the default browser of the user
- gapp: LiveAPI, import geocaches now has option to select center and radius from google map
- gappsf: change: moved extra geocache information to the absolute beginning of the description with GPX export
- gappsf: add: trackable groups
- gappsf: add: Live API authorization with the default browser of the user
- gappsf: LiveAPI, import geocaches now has option to select center and radius from google map

V1.9.19.0

- gapp: fix: updating existing log text and geocache description
- gapp: fix: added missing selected geocache marker to setup.
- gapp: add: option to add extra geocache information to cache description with GPX export
- gappsf: add: option to add extra geocache information to cache description with GPX export
- gappsf: fix: GPX export selection of target device

V1.9.18.0

- gapp: fix: Generation of statistics now ignores time when sorting finds
- gapp: Google map, added option to mark selected geocaches when all geocaches are on the map
- gapp: fix: fetching full log data for geocache viewer
- gapp: change: fetching full geocache data
- gapp: change: Geocache Viewer now automatically refreshed when log data is changed
- gappsf: add: Cachelist, added set selected geocache location as center
- gappsf: add: selection of active database in main menu
- gappsf: add: removal of active database in main menu
- gappsf: add: user can select settings folder (also commandline option)
